force-app/main/default/objects/Milestone__c/fields/Calculate__c.field-meta.xml
<CustomField>
    <fullName>Calculate__c</fullName>
    <formula>IF(
   Total_To_dos__c  = 0,
  0,
  (Number_of_complete_to_dos__c /  Total_To_dos__c )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Calculate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>