force-app/main/default/objects/Milestone__c/fields/Number_of_complete_to_dos__c.field-meta.xml
<CustomField>
    <fullName>Number_of_complete_to_dos__c</fullName>
    <label>Number of complete to- dos</label>
    <summaryFilterItems>
        <field>To_Do_Item__c.Status__c</field>
        <operation>equals</operation>
        <value>Complete</value>
    </summaryFilterItems>
    <summaryForeignKey>To_Do_Item__c.Milestone__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>