force-app/main/default/objects/Milestone__c/fields/Total_To_dos__c.field-meta.xml
<CustomField>
    <fullName>Total_To_dos__c</fullName>
    <label>Total To-dos</label>
    <summaryForeignKey>To_Do_Item__c.Milestone__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>